fix Map on mobile

--- a/frontend/src/components/SpotSearchPage/SpotSearchPage.css
+++ b/frontend/src/components/SpotSearchPage/SpotSearchPage.css
@@ -168,6 +168,7 @@
     }
     .SearchGoogleMap {
         width: 100%;
+        left: 0;
     }
     #mobileListMapSelector {
         display: inherit;
